# rct_progress

./: .gitignore  Building legacy scores.md  CHANGELOG.md  CONTRIBUTING.md  CSS0.DAT.dec  LICENSE  README.md  README_rct1_highscores.md  build_highscores.py  css0_parsed.csv  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: binaries.yml  ci.yml  release.yml
doc/: CSS0 info.txt
outdir/: css0_parsed_split.csv
scripts/: bruteforce_decrypt.py  check_best_variant.py  decrypt_and_parse_css0.py  decrypt_css0.py  decrypt_css0_final.py  diagnose_rle_decrypt.py  parse_css0.py  score_decrypt_variants.py  try_decrypt_variants.py
src/rct_progress/: __init__.py  cli.py  core.py  decrypt_and_parse_css0.py  highscores.py  rct_progess.py  rct_progress.py
