[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rct_progress"
version = "0.3.0"
description = "Tools for decrypting and parsing RCT CSS0.DAT progress/scenario archives"
authors = [
  { name = "zackfertig", email = "zack@example.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

keywords = ["rollercoaster-tycoon", "rct", "css0", "rle", "decompress", "decrypt"]

[project.urls]
[project.scripts]
# New console scripts (renamed for clarity)
rct1-to-csv = "rct_progress.cli:main"
rct1-to-openrct2 = "rct_progress.highscores:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}



